turtleart.flower3.Flower3.scala.error
Compilation error:
Flower3:2: error: value droite is not a member of Unit
  droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);droite(90);avance(20);gauche(90);avance(20);gauche(90);avance(40);gauche(90);avance(20);gauche(90);avance(20)droite(90);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);droite(180)
                                                                                                                                                                                 ^